# NuclearCutter

./: .gitignore  README.md  pyproject.toml
docs/: SPEC.md
nuclearcutter/: cli.py  schema.py
nuclearcutter/detection/: nsfw_classifier.py  profanity.py  transcribe.py  vlm_confirm.py
nuclearcutter/detection/data/: profanity_wordlist.txt
nuclearcutter/fingerprint/: fingerprint.py
nuclearcutter/render/: renderer.py  skip_card.py
nuclearcutter/scan/: repo_match.py  scanner.py
nuclearcutter/utils/: ffmpeg.py  llm_client.py
tests/: test_integration_ffmpeg.py  test_llm_client.py  test_renderer_planning.py  test_schema.py  test_skip_card.py
