[project]
name = "nuclearcutter"
version = "0.1.0"
description = "Detect and censor nudity, intimate scenes, and foul language in local movie files. Self-hosted, runs on Apple Silicon."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31",
    "Pillow>=10.0",
    "ImageHash>=4.3",
    "nudenet>=3.4",
    "mlx-whisper>=0.4",
    "pysrt>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
nuclearcutter = "nuclearcutter.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["nuclearcutter*"]

[tool.setuptools.package-data]
nuclearcutter = ["detection/data/*.txt"]
